# streamingapp

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
.planning/: ISSUES.md  PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-media-server/: 02-01-PLAN.md  02-01-SUMMARY.md  DISCOVERY.md
.planning/phases/03-backend-api/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/src/app/: config.py  db.py  main.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: streams.py
backend/src/app/migrations/: env.py
backend/src/app/migrations/versions/: 1615ba97ca26_create_streams_and_devices.py  691a831975c0_add_missing_fields_to_streams.py
backend/src/app/models/: __init__.py  device.py  stream.py
backend/src/app/schemas/: stream.py
backend/src/app/services/: stream_service.py
backend/src/app/tests/: conftest.py  test_auth.py  test_db.py  test_services.py  test_smoke.py  test_streams_api.py
ios/: .gitignore  Project.swift
ios/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Sources/: StreamLiveApp.swift
ios/Sources/Streaming/: RTMPPublisher.swift
ios/Sources/Views/: HomeView.swift
ios/Tuist/: Package.swift
media/: docker-compose.yml  mediamtx.yml
scripts/: dev-backend.sh  setup.sh
(+1 files in other folders)
